--- a/yippee/M.html
+++ b/yippee/M.html
@@ -1,22 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+ <title>Over Marien</title>
+ 
+ <meta charset="UTF-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
+
+ <div class="w3-bar w3-black">
+  <a href="#" class="w3-bar-item w3-button w3-mobile">Home</a>
+  <a href="#" class="w3-bar-item w3-button w3-mobile">Over Marien</a>
+  <a href="#" class="w3-bar-item w3-button w3-mobile">Over Leendert</a>
+  <a href="#" class="w3-bar-item w3-button w3-mobile">The Game</a>
+ </div>
 </head>
-<body>
-    <h1>Over M</h1>
-    <br>
-    <h2>Wie ben ik?</h2>
-    <p>Ik ben Marien. Ik woon heel mijn leven in Doornspijk. </p>
-    <br>
-    <h2>Toekomstvisie</h2>
-    <p>Ik weet nog niet precies wat ik wil worden en ook nog niet wat mijn vervolgstudie gaat worden. 
-        Voor nu trekt de ICT-wereld me wel, maar dat kan altijd nog veranderen. Daar past natuurlijk het vak informatica perfect bij.</p>
-    <br>]
-    <h2>Welke vakken heb ik?</h2>
-    <ul>
+
+<body class="w3-content" style="max-width:850px">
+<div class="w3-container">
+
+ <div class="w3-bottombar w3-panel w3-border-blue">
+  <h1 style="text-shadow:1px 1px 0 #444">Over Marien</h1>
+ </div>
+ 
+ <br>
+ 
+ <div class="w3-border-bottom w3-panel w3-border-blue">
+  <h2>Wie ben ik?</h2>
+ </div>
+ <p>Ik ben Marien Lankman. Ik ben 15 jaar oud. Ik woon in Doornspijk. Ik game graag in mijn vrije tijd. Daarnaast speel ik piano. Ook houd ik van programmeren:</p>
+<a href="https://maldevacademy.com/">Maldev Academy</a>
+
+ <div class="w3-card" style="width:50%;max-width:250px">
+  <img src="img_avatar1.png" alt="Person" style="width:100%">
+  <div class="w3-container">
+   <h4>Simon</h4>
+   <p>The boss of all bosses</p>
+  </div>
+ </div>
+  
+  <br>
+   
+ <div class="w3-border-bottom w3-panel w3-border-blue ">  
+  <h2>Toekomstvisie</h2>
+ </div>
+ <p>.</p>
+       
+ <br>
+
+ <div class="w3-border-bottom w3-panel w3-border-blue ">
+  <h2>Welke vakken heb ik?</h2>
+ </div>
+ <p>Hier een overzicht van de vakken die ik heb.</p>
+ <ul class="w3-ul w3-card w3-mobile" style="width:50%">
   <li>Bewegingsonderwijs</li>
   <li>Engels</li>
   <li>Godsdienst</li>
@@ -28,7 +63,21 @@
   <li>Nederlands</li>
   <li>Scheikunde</li>
   <li>Wiskunde B</li>
-    </ul>
+  <li>Biologie</li>
+ </ul>
+
+<br>
+<button class="w3-button w3-light-grey" onclick="myFunction()">Dark Mode on/off</button>
+</div>
+ <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam auctor, nunc eget ultricies lacinia, nunc nisl aliquam nunc, eget ultricies nisl nunc eget nisl. Nullam auctor, nunc eget ultricies lacinia, nunc nisl aliquam nunc, eget ultricies nisl nunc eget nisl.</p>
+
+
+<script>
+function myFunction() {
+  let x = document.body;
+  x.classList.toggle("w3-black");
+}
+</script>
 
 </body>
 </html>
