--- a/game_files/main.html
+++ b/game_files/main.html
@@ -19,6 +19,6 @@
       <p>Good luck!</p>
       <form method="get">
         <input type="number" name="seed" placeholder="Enter a seed..." value="">
-        <input type="submit" value="Play Game" onclick='this.form.action=location.pathname + "speelgame.html";'>
+        <input type="submit" value="Play Game" onclick='this.form.action="speelgame.html";'>
     </main>
 </body></html>
