--- a/game_files/speelgame.html
+++ b/game_files/speelgame.html
@@ -7,11 +7,22 @@
     <link rel="stylesheet" type="text/css" href="tooltips.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <title>Craftables</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        body {
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+        }
+    </style>
 </head>
 <body>
-    <div class="top-bar">
-        <script src="sketch.js"></script>
-    </body>
+    <script src="sketch.js"></script>
+</body>
 </html>
